[gd_scene load_steps=2 format=3 uid="uid://sdmf6jm34hov"]

[ext_resource type="Script" uid="uid://csoeiecob1eh8" path="res://Home/AudioLogs.gd" id="1_o5d30"]

[node name="Window" type="Window"]
audio_listener_enable_2d = true
initial_position = 1
size = Vector2i(245, 130)
script = ExtResource("1_o5d30")

[node name="Player" type="AudioStreamPlayer2D" parent="."]

[node name="Subtitles" type="Panel" parent="."]
offset_top = 50.0
offset_right = 244.0
offset_bottom = 130.0

[node name="Timer" type="Timer" parent="Subtitles"]

[node name="Text" type="RichTextLabel" parent="Subtitles"]
layout_mode = 0
offset_left = 4.0
offset_top = 10.0
offset_right = 244.0
offset_bottom = 80.0
text = "This is sample text line 1
This is sample text line 2
This is sample text line 3
This is sample text line 4
This is sample text line 5
This is sample text line 6
This is sample text line 7
This is sample text line 8"
scroll_following = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayPanel" type="Panel" parent="."]
offset_right = 244.0
offset_bottom = 50.0

[node name="Slider" type="HSlider" parent="PlayPanel"]
layout_mode = 0
offset_left = 44.0
offset_top = 10.0
offset_right = 172.0
offset_bottom = 41.0
editable = false
scrollable = false

[node name="Button" type="Button" parent="PlayPanel"]
layout_mode = 0
offset_left = 12.0
offset_top = 10.0
offset_right = 44.0
offset_bottom = 41.0
text = "⏵︎"

[node name="Timestamp" type="RichTextLabel" parent="PlayPanel"]
layout_mode = 0
offset_left = 164.0
offset_top = 10.0
offset_right = 244.0
offset_bottom = 34.0
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="close_requested" from="." to="." method="kill"]
[connection signal="timeout" from="Subtitles/Timer" to="." method="ScrollSubtitles"]
[connection signal="value_changed" from="PlayPanel/Slider" to="." method="onSliderChnged"]
[connection signal="pressed" from="PlayPanel/Button" to="." method="PlayPauseButtonPressed"]
